syntax = "proto3";

package solana.spl.v1;

message TokenTransfers {
  repeated TokenTransfer transfers = 1;
}

message TokenTransfer {
  string transaction_id = 4;
  uint64 ordinal = 5;

  string from = 1;
  string to = 2;
  uint64 amount = 3;
}
